--- a/_posts/2014-1-1-2-heads-up.md
+++ b/_posts/2014-1-1-2-heads-up.md
@@ -1,11 +1,12 @@
 ---
 layout: slide
-title: Heads Up
+title: Abaut Me
 ---
 
-reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with support for CSS 3D transforms to see it in its full glory.
+Started to be a nerd with 11.
 
-reveal-jekyll turns Markdown files to slides with the power of Jekyll.
+Started to learn ruby 2005
+
 
 <aside markdown="1" class="notes">
 Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
